<resources>
    <string name="app_name">SayIt</string>
    <string name="login">Login</string>
    <string name="appname">SayIt!</string>
    <string name="say_it_slogan">Brave To Speak English</string>
    <string name="sign_in_to_your_account">Sign in to your account</string>
    <string name="app_logo">App Logo</string>
    <string name="password_error_message">Password cannot be less than 8 characters</string>
    <string name="email_error_message">Use the valid email</string>
    <string name="email">Email</string>
    <string name="hint_email">Input your email</string>
    <string name="password">Password</string>
    <string name="hint_password">Input your password</string>
    <string name="register">Register</string>
    <string name="sign_up_to_create_account">Sign up to create account</string>
    <string name="name">Name</string>
    <string name="hint_name">Input your name</string>
    <string name="search">Search</string>
    <string name="sorting">Sorting</string>
    <string name="profile">Profile</string>
    <string name="ascending">A-Z</string>
    <string name="descending">Z-A</string>
    <string name="home">Home</string>
    <string name="vocabulary_vault">VOCABULARY VAULT</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="logout">Logout</string>
    <string name="update">Update</string>
    <string name="editprofile">Edit Profile</string>
    <string name="detail">Detail</string>
    <string name="speak_this_word">Speak this word</string>
    <string name="tap_to_speak">Tap to speak</string>
    <string name="message_state">Congratulations you are right!</string>

    <string name="logout_alert">Do you want to logout?</string>
    <string name="logout_message">Are you sure to leave us?</string>
    <string name="search_word">Find a word ...</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="message_wrong_state">Oops ... you are wrong :(</string>
    <string name="try_again">Try Again</string>
</resources>