<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.detailword.DetailWordActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/tool_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/primary_light"
        app:title="@string/detail"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <TextView
        android:id="@+id/detail_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/TextAppearance.Material3.TitleLarge"
        android:text="@string/speak_this_word"
        android:textStyle="bold"
        android:fontFamily="@font/average_sans"
        android:layout_marginTop="108dp"
        app:layout_constraintTop_toBottomOf="@id/tool_bar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/word_item"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/TextAppearance.Material3.HeadlineLarge"
        android:fontFamily="@font/average_sans"
        android:text="@string/password"
        android:textColor="@color/black"
        android:layout_marginTop="128dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/detail_title"/>

    <Button
        android:id="@+id/btn_record"
        style="@style/RecordButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/tap_to_speak"
        android:layout_marginTop="140dp"
        android:layout_marginEnd="99dp"
        android:layout_marginStart="99dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/word_item"/>

    <ImageView
        android:id="@+id/background_state"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@color/primary_light"
        android:visibility="gone"
        tools:visibility="visible"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btn_record"/>

    <TextView
        android:id="@+id/message_state"
        style="@style/TextAppearance.Material3.HeadlineSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/message_state"
        android:layout_marginTop="28dp"
        android:textStyle="bold"
        android:fontFamily="@font/gotham_bold"
        android:visibility="gone"
        tools:visibility="visible"
        app:layout_constraintTop_toTopOf="@id/background_state"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>



</androidx.constraintlayout.widget.ConstraintLayout>