<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.profile.editprofile.EditProfileActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/tool_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/primary_light"
        app:title="@string/editprofile"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/profile_image"
        android:layout_width="0dp"
        android:layout_height="180dp"
        android:layout_marginTop="37dp"
        android:src="@drawable/harryhermioneron"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tool_bar"/>

    <ImageView
        android:id="@+id/add_picture"
        android:layout_width="32dp"
        android:layout_height="0dp"
        android:layout_marginEnd="128dp"
        android:layout_marginBottom="12dp"
        app:layout_constraintBottom_toBottomOf="@id/profile_image"
        app:layout_constraintEnd_toEndOf="@id/profile_image"
        android:src="@drawable/ic_add_picture" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/nameEditTextLayout"
        style="@style/MyTextInputLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="35dp"
        android:layout_marginEnd="35dp"
        android:layout_marginTop="37dp"
        app:boxCornerRadiusBottomStart="10dp"
        app:boxCornerRadiusBottomEnd="10dp"
        app:boxCornerRadiusTopEnd="10dp"
        app:boxCornerRadiusTopStart="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/profile_image">

        <com.example.sayit.view.customview.MyEditText
            android:id="@+id/nameEditText"
            android:layout_width="340dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:fontFamily="@font/average_sans"
            android:textSize="16sp"
            android:inputType="textPersonName"
            android:drawablePadding="10dp"
            android:drawableStart="@drawable/ic_profile"
            android:hint="@string/hint_name"
            tools:ignore="SpeakableTextPresentCheck"/>
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/btn_update_profile"
        style="@style/ProfilePageButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/update"
        android:layout_marginTop="38dp"
        android:layout_marginEnd="99dp"
        android:layout_marginStart="99dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/nameEditTextLayout"/>

</androidx.constraintlayout.widget.ConstraintLayout>